[tool.poetry]
name = "brfast"
version = "0.1.0"
description = "BrFAST (Browser Fingerprinting Attribute Selection Tool)"
authors = ["Nampoina Andriamilanto <tompo.andri@gmail.com>"]
repository = "https://github.com/tandriamil/BrFAST"
keywords = ["browser fingerprinting", "device fingerprinting", "attribute selection"]
packages = [{ include = "brfast" }]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
pandas = "^1.5.2"
python-dateutil = "^2.8.2"
scipy = "^1.9.3"
sortedcontainers = "^2.4.0"
flask = "^2.2.2"

[tool.poetry.group.dev.dependencies]
coverage = "^6.5.0"
pdoc = "^12.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
