[tool.poetry]
name = "brfast"
version = "0.1.0"
description = "BrFAST (Browser Fingerprinting Attribute Selection Tool)"
authors = ["Nampoina Andriamilanto <tompo.andri@gmail.com>"]
repository = "https://github.com/tandriamil/BrFAST"
keywords = ["browser fingerprinting", "device fingerprinting", "attribute selection"]
packages = [{ include = "brfast" }]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
cython = "3.0.5"
flask = "3.0.0"
loguru = "0.7.2"
modin = {version = "0.25.1", extras = ["all"]}
pandas = "2.1.3"
python-dateutil = "2.8.2"
scipy = "1.11.3"
sortedcontainers = "2.4.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.3.2"
pdoc = "^14.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
