[metadata]
name = brfast
version = 0.0.1
author = Nampoina Andriamilanto
author_email = tompo.andri@gmail.com
description = BrFAST (Browser Fingerprinting Attribute Selection Tool)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tandriamil/BrFAST
project_urls =
    Bug Tracker = https://github.com/tandriamil/BrFAST/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = brfast
packages = find:
python_requires = >=3.8

[options.packages.find]
where = brfast
